...

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_228">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivHomeStreetViewThumbnail"
                android:layout_width="@dimen/dimen_200"
                android:layout_height="@dimen/dimen_200"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                tools:src="@color/black" />

...
            android:text="@string/explore"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_text_size_14" />

        <TextView
            android:id="@+id/tvHomeStreetViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:textColor="@color/main_black"
...
