<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivStory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <View
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_shadow_reverse_strong" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvStoryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingHorizontal="@dimen/dimen_30"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_text_size_26"
                android:visibility="gone"
                tools:text="Day la tieu de sieu to khong lo"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_40">

                <TextView
                    android:id="@+id/tvStory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingHorizontal="@dimen/dimen_30"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_text_size_18"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/flStoryNext"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Day la mo ta sieu dai  Day la mo ta sieu dai  Day la mo ta sieu dai  Day la mo ta sieu dai Day la mo ta sieu dai  Day la mo ta sieu dai " />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/flStoryNext"
                    android:layout_width="@dimen/dimen_40"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_marginEnd="@dimen/dimen_30"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/dimen_8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/ivStoryNext"
                        android:layout_width="@dimen/dimen_24"
                        android:layout_height="@dimen/dimen_24"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_right_black" />

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@id/tvStory"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/vStoryLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:id="@+id/vStoryRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

    </FrameLayout>

</layout>
